# custom-rdp

./: .env.example  .gitignore  README.md  package-lock.json  package.json  start-dev.bat  start-dev.sh  turbo.json
apps/agent/src-tauri/: Cargo.toml
apps/agent/src-tauri/src/: main.rs  screen_capture.rs  signaling.rs  webrtc_client.rs
apps/client/: .env.example  package.json
apps/client/src/: App.tsx
apps/client/src/contexts/: AuthContext.tsx  SignalingContext.tsx
apps/client/src/hooks/: useWebRTC.ts
apps/client/src/pages/: DashboardPage.tsx  LoginPage.tsx  ViewerPage.tsx
apps/signaling/: .env.example  package.json
apps/signaling/src/: app.module.ts  main.ts
apps/signaling/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts
apps/signaling/src/auth/schemas/: user.schema.ts
apps/signaling/src/device/: device.module.ts  device.service.ts
apps/signaling/src/device/schemas/: device.schema.ts
apps/signaling/src/session/: session.module.ts  session.service.ts
apps/signaling/src/session/schemas/: session.schema.ts
apps/signaling/src/signaling/: signaling.gateway.ts  signaling.service.ts
